testsuite/tests/typecheck/should_fail/CommonFieldTypeMismatch.stderr
CommonFieldTypeMismatch.hs:3:1: error: [GHC-91827]
    • Constructors A1 and A2 give different types for field ‘fld’
    • In the data type declaration for ‘A’

